# VulkanJumpStart

./: .gitignore  VulkanJumpStart.sln
VulkanJumpStart/: CMakeLists.txt  CMakeSettings.json  Main.cpp  Main.h  OS.h  VDeleter.h  VKFW.cpp  VulkanFunctions.cpp  VulkanFunctions.h  VulkanJumpStart.rc  VulkanJumpStart.vcxproj  VulkanJumpStart.vcxproj.filters  Window.cpp  Window.h  build.bat  build.sh  internal.cpp  main.cpp  resource.h  tools.cpp  vkfw.cpp  vkfw.h  vulkan_functions.cpp  win32_input.cpp  win32_window.cpp  x11_input.cpp  x11_window.cpp
VulkanJumpStart/Data/Models/: cube.mdl  scene1.mdl
VulkanJumpStart/Data/Shaders/: compile.bat  shader.vert  vert.spv
VulkanJumpStart/Include/: OS.h  VKFW.h  VkPtr.h  VulkanFunctions.h  VulkanFunctions.inl  helper_macros.h  internal.h  main.h  platform.h  smartptr.h  tools.h  types.h  vkfw.h  vkptr.h  vulkan_functions.h  vulkan_functions.inl  win32_input.h  win32_window.h  x11_input.h  x11_window.h
VulkanJumpStart/Include/geometry/: TVector3D.h  model.h
